feat(server): re-implement multimodal message attachments
